[gd_scene load_steps=5 format=3 uid="uid://xvrxu5gw0sym"]

[ext_resource type="FontFile" uid="uid://bo6pw8nk0pcuh" path="res://Assets/Fonts/EightBitDragon-anqx.ttf" id="1_7gssn"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_twsuo"]
[ext_resource type="Texture2D" uid="uid://0gh4xtsu7xhj" path="res://Assets/Images/cover3.png" id="2_u6pbn"]
[ext_resource type="Texture2D" uid="uid://tjll8tsi5bby" path="res://Assets/Images/cover4.png" id="3_1x36p"]

[node name="main menu" type="CanvasLayer"]
script = ExtResource("1_twsuo")

[node name="Bg1" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(575.38, 322.828)
scale = Vector2(1.27907, 1.07724)
texture = ExtResource("2_u6pbn")

[node name="Bg2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(575.38, 322.828)
scale = Vector2(1.27907, 1.07724)
texture = ExtResource("3_1x36p")

[node name="main" type="Node2D" parent="."]

[node name="PlayButton" type="Button" parent="main"]
anchors_preset = -1
offset_left = 582.0
offset_top = 257.0
offset_right = 769.0
offset_bottom = 330.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_7gssn")
theme_override_font_sizes/font_size = 64
text = "PLAY
"
metadata/_edit_use_anchors_ = true

[node name="QuitButton" type="Button" parent="main"]
anchors_preset = -1
anchor_left = 0.657118
anchor_top = 0.481481
anchor_right = 0.797743
anchor_bottom = 0.594136
offset_left = 593.0
offset_top = 352.0
offset_right = 755.0
offset_bottom = 425.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_7gssn")
theme_override_font_sizes/font_size = 64
text = "QUIT
"

[node name="tutorial" type="Node2D" parent="."]

[node name="StartButton" type="Button" parent="tutorial"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 976.0
offset_top = 591.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_7gssn")
theme_override_font_sizes/font_size = 48
text = "START"

[node name="BackButton" type="Button" parent="tutorial"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 591.0
offset_right = 142.0
offset_bottom = 648.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_7gssn")
theme_override_font_sizes/font_size = 48
text = "BACK"

[node name="Label2" type="Label" parent="tutorial"]
offset_left = 137.0
offset_top = 51.0
offset_right = 1006.0
offset_bottom = 393.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7gssn")
theme_override_font_sizes/font_size = 54
text = "Objective: infect all houses

avoid cats"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label" type="Label" parent="tutorial"]
offset_left = 142.0
offset_top = 54.0
offset_right = 1011.0
offset_bottom = 396.0
theme_override_colors/font_color = Color(0.505882, 0.168627, 0.0470588, 1)
theme_override_fonts/font = ExtResource("1_7gssn")
theme_override_font_sizes/font_size = 54
text = "Objective: infect all houses

avoid cats"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="pressed" from="main/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="main/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="tutorial/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="tutorial/BackButton" to="." method="_on_back_button_pressed"]
